// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal header component renders with close button 1`] = `
<div
  className="header sc-htpNat emAhSe"
>
  <h4
    className="sc-bxivhb ddKihU"
    id={null}
  >
    This is the header with close button.
  </h4>
  <button
    aria-label="Close"
    className="sc-ifAKCX fHfvgf sc-bdVaJa ijDihB"
    onClick={[Function]}
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
    <span
      className="sc-bwzfXH fkxhjC"
    >
      Close
    </span>
  </button>
</div>
`;

exports[`modal header component renders without close button 1`] = `
<div
  className="header sc-htpNat emAhSe"
>
  <h4
    className="sc-bxivhb ddKihU"
    id={null}
  >
    This is the header without close button.
  </h4>
</div>
`;
